--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Website Design System Example</title>
 
     <!-- Linking CSS Style Sheets-->
-    <link href="styles.css" rel="stylesheet">
+    <link href="styles/styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato|Slabo+13px" rel="stylesheet">
 </head>
 
